# haystack-document-search

./: Dockerfile  faiss_document_store.db  pyproject.toml  start_app.py
apis/: main.py
apis/routes/: server.py
model/: my_faiss_index.faiss  my_faiss_index.json
