[tool.poetry]
name = "haystack-document-search"
version = "0.1.0"
description = ""
authors = ["Dhavaleswar <93dhavaleshwar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.5,<3.13"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pandas = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
